src/objects/DeviceApplicationAssoc__c.object
<CustomObject>
    <fields>
        <fullName>Past_SDS_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Past SDS Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Platform_Release__c</fullName>
        <formula>Device__r.Android_Release__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From Device &quot;Platform Release&quot; field</inlineHelpText>
        <label>Platform Release</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <formula>text(Device__r.Platform__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From Device &quot;Platform&quot; field</inlineHelpText>
        <label>Platform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Description__c</fullName>
        <label>Program Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program_Instructions__c</fullName>
        <label>Program Instructions</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Questionnaire_Received_from_3rd_Party__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Questionnaire Received from 3rd Party</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_Committed_GM_Release_Candidate__c</fullName>
        <label>Committed GM Release Candidate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requester_Approval__c</fullName>
        <label>Requester Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Device_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Royalty_Current__c</fullName>
        <description>This is the current Royalty price. To properly determine pricing, please consider royalty high, royalty current and royalty low, as well as the royalty payment attribute.</description>
        <formula>Application__r.Royalty_Current__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the current Royalty price. To properly determine pricing, please consider royalty high, royalty current and royalty low, as well as the royalty payment attribute.</inlineHelpText>
        <label>Royalty Current</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Royalty_High__c</fullName>
        <description>This is the High Royalty. To properly determine pricing, please consider royalty high, royalty current and royalty low, as well as the royalty payment attribute.</description>
        <formula>Application__r.Royalty_High__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the High Royalty. To properly determine pricing, please consider royalty high, royalty current and royalty low, as well as the royalty payment attribute.</inlineHelpText>
        <label>Royalty High</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Royalty_Low__c</fullName>
        <description>This is the Low Royalty. To properly determine pricing, please consider royalty high, royalty current and royalty low, as well as the royalty payment attribute.</description>
        <formula>Application__r.Royalty_Low__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Low Royalty. To properly determine pricing, please consider royalty high, royalty current and royalty low, as well as the royalty payment attribute.</inlineHelpText>
        <label>Royalty Low</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Royalty_Payment_Attribute__c</fullName>
        <description>This helps describe the royalty type. I.E. is it a fixed per unit rate, a rate table, a rate table that resets annually. This fields helps to characterize the high, low, and current royalty rates above.</description>
        <formula>text(Application__r.Royalty_Payment_Attribute__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This helps describe the royalty type. I.E. is it a fixed per unit rate, a rate table, a rate table that resets annually. This fields helps to characterize the high, low, and current royalty rates above.</inlineHelpText>
        <label>Royalty Payment Attribute</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SA_Date__c</fullName>
        <formula>Device__r.SA_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>SA_Date, from the Device object -- Read Only</inlineHelpText>
        <label>SA_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFID_Device__c</fullName>
        <description>The internal SF record ID of the related Device record</description>
        <formula>Device__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFID_Device</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SWKIT__c</fullName>
        <description>SWKIT from related Device record</description>
        <formula>Device__r.SW_Kit__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>SWKIT from related Device record</inlineHelpText>
        <label>SWKIT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SWKitId__c</fullName>
        <formula>Device__r.SW_Kit__c</formula>
        <label>SWKitId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SW_KIT_Effective_Date__c</fullName>
        <formula>Device__r.SW_Kit__r.Effective_Date__c</formula>
        <label>SW KIT Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signature_Requirements__c</fullName>
        <description>Please specify any localization requirements - i.e. language requirements or customizations such as branding requirements.</description>
        <inlineHelpText>Please specify any localization requirements - i.e. language requirements or customizations such as branding requirements.</inlineHelpText>
        <label>Signature Requirements</label>
        <picklist>
            <picklistValues>
                <fullName>Carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Further Investigation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Skip_App_Manager_Selection_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for DevApp Approval Process.</description>
        <label>Skip App Manager Selection Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skip_Partner_Manager_Approval_Country__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Partner Manager Approval - Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skip_Partner_Manager_Approval_Language__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Partner Manager Approval - Language</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skip_SDS_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for DevApp approval process.</description>
        <label>Skip SDS Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Id__c</fullName>
        <description>Id of the Core/Stable/Program which resulted in this DeviceApplication being created.</description>
        <externalId>true</externalId>
        <label>Source Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Name__c</fullName>
        <label>Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Source_Id__c , Source_Name__c )</formula>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specific_Requirements__c</fullName>
        <description>Please specify any localization requirements - i.e. language requirements or customizations such as branding requirements.</description>
        <inlineHelpText>Please specify any localization requirements - i.e. language requirements or customizations such as branding requirements.</inlineHelpText>
        <label>Specific Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Stable_Line__c</fullName>
        <formula>Device__r.Stable_Line__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From Device &quot;Stable Line&quot; field</inlineHelpText>
        <label>Stable Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stable__c</fullName>
        <formula>Device__r.Stable__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stable</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stable_count__c</fullName>
        <formula>Application__r.Stable_count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stable_count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temp__c</fullName>
        <inlineHelpText>special field visible to admins only; used for manual refresh triggers of &quot;state&quot;</inlineHelpText>
        <label>Temp</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Results_Received_from_3rd_Party__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Results Received from 3rd Party</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Welcome_Package_Sent__c</fullName>
        <description>Technical and process info provided by EMD PM</description>
        <inlineHelpText>Technical and process info provided by EMD PM</inlineHelpText>
        <label>Welcome Package Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3rd Party Approval Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Approval_Status__c</fullName>
        <inlineHelpText>Only available if the related Application requires 3rd party approval.</inlineHelpText>
        <label>3rd Party Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Device Application</label>
    <listViews>
        <fullName>AT_T_Preloads_kickoff_view</fullName>
        <booleanFilter>1 AND 2 AND (3 Or (4 AND 5)) And 6 And 7 and 8</booleanFilter>
        <columns>Device__c</columns>
        <columns>Application__c</columns>
        <columns>AcctOwner__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>NAME</columns>
        <columns>Application_Manager__c</columns>
        <columns>Disclosure_Complete__c</columns>
        <columns>Welcome_Package_Sent__c</columns>
        <columns>Questionnaire_Received_from_3rd_Party__c</columns>
        <columns>Test_Results_Received_from_3rd_Party__c</columns>
        <columns>Expected_Alpha__c</columns>
        <columns>Expected_Beta__c</columns>
        <columns>Requested_Committed_GM_Release_Candidate__c</columns>
        <columns>Expected_GM__c</columns>
        <columns>MOTOREADY_App_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Device__c</field>
            <operation>contains</operation>
            <value>AT&amp;T</value>
        </filters>
        <filters>
            <field>Device_Cancelled__c</field>
            <operation>notEqual</operation>
            <value>yes</value>
        </filters>
        <filters>
            <field>Application_Type__c</field>
            <operation>equals</operation>
            <value>Preload</value>
        </filters>
        <filters>
            <field>Application_Type__c</field>
            <operation>equals</operation>
            <value>CBS (Carrier Branded Service)</value>
        </filters>
        <filters>
            <field>Carrier_furnished__c</field>
            <operation>contains</operation>
            <value>Motorola managed</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notEqual</operation>
            <value>Google</value>
        </filters>
        <filters>
            <field>Device_SA_Status__c</field>
            <operation>notContain</operation>
            <value>SA,NPI,canceled,delete</value>
        </filters>
        <filters>
            <field>DeviceID__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>AT&amp;T Preloads - kickoff view</label>
    </listViews>
    <listViews>
        <fullName>All_Conditional_DevApps</fullName>
        <columns>NAME</columns>
        <columns>Device__c</columns>
        <columns>DeviceID__c</columns>
        <columns>Application__c</columns>
        <columns>Account__c</columns>
        <columns>Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Conditional</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notContain</operation>
            <value>facebook</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notContain</operation>
            <value>yahoo</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notContain</operation>
            <value>google</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notContain</operation>
            <value>youtube</value>
        </filters>
        <label>All Conditional DevApps (w/ exceptions)</label>
    </listViews>
    <listViews>
        <fullName>Amazon_Kindle_MotoReady</fullName>
        <columns>Device__c</columns>
        <columns>SA_Date__c</columns>
        <columns>Application__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>AcctOwner__c</columns>
        <columns>Application_Manager__c</columns>
        <columns>Disclosure_Complete__c</columns>
        <columns>Welcome_Package_Sent__c</columns>
        <columns>Actual_Alpha__c</columns>
        <columns>Actual_Beta__c</columns>
        <columns>Actual_GM__c</columns>
        <columns>Device_SA_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application__c</field>
            <operation>contains</operation>
            <value>Kindle</value>
        </filters>
        <filters>
            <field>Application_Type__c</field>
            <operation>equals</operation>
            <value>Preload</value>
        </filters>
        <filters>
            <field>Device_SA_Status__c</field>
            <operation>notContain</operation>
            <value>canceled</value>
        </filters>
        <filters>
            <field>Device_SA_Status__c</field>
            <operation>notContain</operation>
            <value>SA,NPI</value>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved,In Progress,Conditional</value>
        </filters>
        <label>Amazon Kindle MotoReady</label>
    </listViews>
    <listViews>
        <fullName>Amazon_Kindle_MotoReady_shipped</fullName>
        <columns>Device__c</columns>
        <columns>SA_Date__c</columns>
        <columns>Application__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>AcctOwner__c</columns>
        <columns>Application_Manager__c</columns>
        <columns>Disclosure_Complete__c</columns>
        <columns>Welcome_Package_Sent__c</columns>
        <columns>Actual_Alpha__c</columns>
        <columns>Actual_Beta__c</columns>
        <columns>Actual_GM__c</columns>
        <columns>Device_SA_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application__c</field>
            <operation>contains</operation>
            <value>Kindle</value>
        </filters>
        <filters>
            <field>Application_Type__c</field>
            <operation>equals</operation>
            <value>Preload</value>
        </filters>
        <filters>
            <field>Device_SA_Status__c</field>
            <operation>notContain</operation>
            <value>canceled</value>
        </filters>
        <filters>
            <field>Device_SA_Status__c</field>
            <operation>contains</operation>
            <value>SA</value>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved,In Progress,Conditional</value>
        </filters>
        <label>Amazon Kindle MotoReady - shipped</label>
    </listViews>
    <listViews>
        <fullName>Avon_2G_Motoready_Report</fullName>
        <booleanFilter>1 AND 2 AND (3 Or (4 AND 5)) And 6</booleanFilter>
        <columns>Device__c</columns>
        <columns>Application__c</columns>
        <columns>NAME</columns>
        <columns>MOTOREADY_App_Status__c</columns>
        <columns>AcctOwner__c</columns>
        <columns>Actual_Beta__c</columns>
        <columns>Actual_GM__c</columns>
        <columns>Expected_Alpha__c</columns>
        <columns>Expected_Beta__c</columns>
        <columns>Expected_GM__c</columns>
        <columns>Actual_Alpha__c</columns>
        <columns>Disclosure_Complete__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Welcome_Package_Sent__c</columns>
        <columns>Device_Feature_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Device__c</field>
            <operation>contains</operation>
            <value>AVON</value>
        </filters>
        <filters>
            <field>Device_SA_Status__c</field>
            <operation>notContain</operation>
            <value>SA,NPI,Canceled</value>
        </filters>
        <filters>
            <field>Application_Type__c</field>
            <operation>equals</operation>
            <value>Preload</value>
        </filters>
        <filters>
            <field>Application_Type__c</field>
            <operation>equals</operation>
            <value>CBS (Carrier Branded Service)</value>
        </filters>
        <filters>
            <field>Carrier_furnished__c</field>
            <operation>contains</operation>
            <value>Motorola managed</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notEqual</operation>
            <value>Google</value>
        </filters>
        <label>Avon 2G/3G Motoready Report</label>
    </listViews>
    <listViews>
        <fullName>Begonia_Gingerberad_Preloads_tracking</fullName>
        <booleanFilter>1 AND (2 Or (3 AND 4)) AND 5</booleanFilter>
        <columns>Device__c</columns>
        <columns>Application_Manager__c</columns>
        <columns>Application__c</columns>
        <columns>Disclosure_Complete__c</columns>
        <columns>Welcome_Package_Sent__c</columns>
        <columns>Actual_Beta__c</columns>
        <columns>Actual_GM__c</columns>
        <columns>Test_Results_Received_from_3rd_Party__c</columns>
        <columns>Questionnaire_Received_from_3rd_Party__c</columns>
        <columns>MOTOREADY_App_Status__c</columns>
        <columns>Confirmation_of_Schedule_from_3rd_Party__c</columns>
        <columns>Actual_GM_Release_Candidate__c</columns>
        <columns>App_Risk_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Device__c</field>
            <operation>contains</operation>
            <value>Begonia - North America US T-Mobile USA UPGRADE 1</value>
        </filters>
        <filters>
            <field>Application_Type__c</field>
            <operation>equals</operation>
            <value>Preload</value>
        </filters>
        <filters>
            <field>Application_Type__c</field>
            <operation>equals</operation>
            <value>CBS (Carrier Branded Service)</value>
        </filters>
        <filters>
            <field>Application_Manager__c</field>
            <operation>equals</operation>
            <value>Verushka Valero</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notEqual</operation>
            <value>Google</value>
        </filters>
        <label>Begonia Gingerberad Preloads - tracking</label>
    </listViews>
    <listViews>
        <fullName>Begonia_TMO_MotoReady_Preloads</fullName>
        <columns>FMD_Feature_ID__c</columns>
        <columns>NAME</columns>
        <columns>Application_Type__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Application_Manager__c</columns>
        <columns>Device__c</columns>
        <columns>Application__c</columns>
        <columns>App_Risk_Flag__c</columns>
        <columns>MOTOREADY_App_Status__c</columns>
        <columns>Welcome_Package_Sent__c</columns>
        <columns>Expected_Beta__c</columns>
        <columns>Expected_GM__c</columns>
        <columns>Actual_Beta__c</columns>
        <columns>Disclosure_Complete__c</columns>
        <columns>Questionnaire_Received_from_3rd_Party__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Device__c</field>
            <operation>contains</operation>
            <value>Begonia</value>
        </filters>
        <filters>
            <field>Application_Manager__c</field>
            <operation>contains</operation>
        </filters>
        <filters>
            <field>Device__c</field>
            <operation>contains</operation>
            <value>North America</value>
        </filters>
        <label>Begonia - TMO - MotoReady Preloads</label>
    </listViews>
    <listViews>
        <fullName>Begonia_Upgrade_Preload_Tracking</fullName>
        <booleanFilter>1 AND (2 Or (3 AND 4)) AND 5</booleanFilter>
        <columns>Device__c</columns>
        <columns>Application__c</columns>
        <columns>Application_Manager__c</columns>
        <columns>MOTOREADY_App_Status__c</columns>
        <columns>Actual_GM__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Disclosure_Complete__c</columns>
        <columns>Welcome_Package_Sent__c</columns>
        <columns>Questionnaire_Received_from_3rd_Party__c</columns>
        <columns>Expected_Alpha__c</columns>
        <columns>Expected_Beta__c</columns>
        <columns>Expected_GM__c</columns>
        <columns>App_Risk_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Device__c</field>
            <operation>contains</operation>
            <value>Begonia - North America US T-Mobile USA MOL 1</value>
        </filters>
        <filters>
            <field>Application_Type__c</field>
            <operation>equals</operation>
            <value>Preload</value>
        </filters>
        <filters>
            <field>Application_Type__c</field>
            <operation>equals</operation>
            <value>CBS (Carrier Branded Service)</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>Google</value>
        </filters>
        <filters>
            <field>Application_Manager__c</field>
            <operation>equals</operation>
            <value>Verushka Valero</value>
        </filters>
        <label>Begonia Upgrade Preload Tracking</label>
    </listViews>
    <listViews>
        <fullName>BlockBuster_MotoReady</fullName>
        <columns>Device__c</columns>
        <columns>SA_Date__c</columns>
        <columns>Device_SA_Status__c</columns>
        <columns>Application__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>AcctOwner__c</columns>
        <columns>Application_Manager__c</columns>
        <columns>Disclosure_Complete__c</columns>
        <columns>Welcome_Package_Sent__c</columns>
        <columns>Actual_Alpha__c</columns>
        <columns>Actual_Beta__c</columns>
        <columns>Actual_GM_Release_Candidate__c</columns>
        <columns>Actual_GM__c</columns>
        <columns>App_Risk_Flag_Condition__c</columns>
        <columns>MOTOREADY_App_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>BlockBuster</value>
        </filters>
        <filters>
            <field>Application_Type__c</field>
            <operation>equals</operation>
            <value>Preload</value>
        </filters>
        <filters>
            <field>Device_SA_Status__c</field>
            <operation>notContain</operation>
            <value>canceled</value>
        </filters>
        <filters>
            <field>Device_SA_Status__c</field>
            <operation>notContain</operation>
            <value>SA,NPI</value>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved,In Progress,Conditional</value>
        </filters>
        <label>BlockBuster MotoReady</label>
    </listViews>
    <listViews>
        <fullName>Brea_Erin_Tracking</fullName>
        <booleanFilter>(1 OR 5 OR 6) AND (2 Or (3 AND 4))</booleanFilter>
        <columns>Device__c</columns>
        <columns>Application_Manager__c</columns>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>MOTOREADY_App_Status__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Disclosure_Complete__c</columns>
        <columns>Welcome_Package_Sent__c</columns>
        <columns>Expected_Alpha__c</columns>
        <columns>Expected_Beta__c</columns>
        <columns>Expected_GM__c</columns>
        <columns>App_Risk_Flag__c</columns>
        <columns>LRB_Approval__c</columns>
        <columns>Include_in_BOM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Device__c</field>
            <operation>contains</operation>
            <value>Brea</value>
        </filters>
        <filters>
            <field>Application_Type__c</field>
            <operation>equals</operation>
            <value>Preload</value>
        </filters>
        <filters>
            <field>Application_Type__c</field>
            <operation>equals</operation>
            <value>CBS (Carrier Branded Service)</value>
        </filters>
        <filters>
            <field>Carrier_furnished__c</field>
            <operation>contains</operation>
            <value>Motorola managed</value>
        </filters>
        <filters>
            <field>Device__c</field>
            <operation>contains</operation>
            <value>Erin</value>
        </filters>
        <filters>
            <field>Device__c</field>
            <operation>contains</operation>
            <value>Erin</value>
        </filters>
        <label>Brea, Erin Tracking</label>
    </listViews>
    <listViews>
        <fullName>Citrix_MotoReady</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>Device__c</columns>
        <columns>SA_Date__c</columns>
        <columns>Application__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>AcctOwner__c</columns>
        <columns>Application_Manager__c</columns>
        <columns>Disclosure_Complete__c</columns>
        <columns>Welcome_Package_Sent__c</columns>
        <columns>Actual_Alpha__c</columns>
        <columns>Actual_Beta__c</columns>
        <columns>Actual_GM__c</columns>
        <columns>Device_SA_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Citrix</value>
        </filters>
        <filters>
            <field>Application_Type__c</field>
            <operation>equals</operation>
            <value>Preload</value>
        </filters>
        <filters>
            <field>Device_SA_Status__c</field>
            <operation>notContain</operation>
            <value>SA,cancel,delete,NPI</value>
        </filters>
        <filters>
            <field>DeviceID__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved,In Progress,Conditional</value>
        </filters>
        <label>Citrix MotoReady</label>
    </listViews>
    <listViews>
        <fullName>DR_Edison_Kickoff</fullName>
        <booleanFilter>(1 AND 3) AND 2 AND 4 AND 5 AND 6 AND 7 AND 8 And 9</booleanFilter>
        <columns>NAME</columns>
        <columns>Device__c</columns>
        <columns>Stable_Line__c</columns>
        <columns>Application_Manager__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Application__c</columns>
        <columns>Lead_Device_for_MOTOREADY__c</columns>
        <columns>MOTOREADY_App_Status__c</columns>
        <columns>Stable_count__c</columns>
        <columns>SA_Date__c</columns>
        <columns>Account_Owner__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Type__c</field>
            <operation>equals</operation>
            <value>Preload</value>
        </filters>
        <filters>
            <field>Include_in_BOM__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>App_SubType__c</field>
            <operation>contains</operation>
            <value>Stand,WAP,Widget,URL</value>
        </filters>
        <filters>
            <field>Device_SA_Status__c</field>
            <operation>notContain</operation>
            <value>SA,cancel,delete</value>
        </filters>
        <filters>
            <field>DeviceID__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Device__c</field>
            <operation>contains</operation>
            <value>Edison</value>
        </filters>
        <filters>
            <field>Device__c</field>
            <operation>contains</operation>
            <value>ASIA</value>
        </filters>
        <filters>
            <field>Device__c</field>
            <operation>notContain</operation>
            <value>China,Korea</value>
        </filters>
        <filters>
            <field>Include_in_BOM__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>DR-Edison Kickoff Asia</label>
    </listViews>
</CustomObject>